--- a/resouces/css/login/main.css
+++ b/resouces/css/login/main.css
@@ -69,36 +69,47 @@ body .login-container .from-contianer .form-title span {
 
 /*------------------------------------------------------------------
 [ Responsive ]*/
-@media (max-width: 992px) {
-	.container-login {
-		padding: 177px 90px 33px 85px;
-	}
+@media only screen and (min-width: 960px) {
+	/* styles for browsers larger than 960px; */
+}
 
-	.login-picture {
-		display: none;
-		/* width: 35%; */
-	}
+@media only screen and (min-width: 1440px) {
+	/* styles for browsers larger than 1440px; */
+}
 
-	.from-contianer {
+@media only screen and (min-width: 2000px) {
+	/* for sumo sized (mac) screens */
+}
+
+@media only screen and (max-device-width: 480px) {
+	/* styles for mobile browsers smaller than 480px; (iPhone) */
+	body .login-container {
+		margin: 10px 10px 10px 10px;
+		padding: 20px 30px 20px 30px;
+	}
+	body .login-container .login-picture{
 		width: 50%;
+		margin: 0 auto;
 	}
+}
 
-	@media (max-width: 768px) {
-		.container-login {
-			padding: 100px 80px 33px 80px;
-		}
-
-		.login-picture {
-			display: none;
-		}
-
-		.from-contianer {
-			width: 100%;
-		}
+@media only screen and (device-width: 768px) {
+	/* default iPad screens */
+	body .login-container {
+		margin: 10px 10px 10px 10px;
+		padding: 80px 30px 80px 30px;
 	}
-
-	@media (max-width: 576px) {
-		.container-login {
-			padding: 100px 15px 33px 15px;
-		}
+	body .login-container .login-picture{
+		width: 50%;
+		margin: 0 auto;
 	}
+}
+
+/* different techniques for iPad screening */
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+	/* For portrait layouts only */
+}
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+	/* For landscape layouts only */
+}
