--- a/resouces/css/index/main.css
+++ b/resouces/css/index/main.css
@@ -21,3 +21,67 @@ body .container .carousel-inner .turn-pirc{
 	width: 586px;
 	height: 415px;
 }
+
+
+/*------------------------------------------------------------------
+[ Responsive ]*/
+@media only screen and (min-width: 960px) {
+	/* styles for browsers larger than 960px; */
+}
+
+@media only screen and (min-width: 1440px) {
+	/* styles for browsers larger than 1440px; */
+}
+
+@media only screen and (min-width: 2000px) {
+	/* for sumo sized (mac) screens */
+}
+
+@media only screen and (max-device-width: 480px) {
+	/* styles for mobile browsers smaller than 480px; (iPhone) */
+	body .container .carousel-inner .turn-pirc{
+		width: 100%;
+		height: 100%;
+	}
+	body .container {
+		margin: 30px 30px 30px 30px;
+		padding: 0px 0px 0px 0px;
+		background-color: #ffffff;
+	}
+	body .container-fluid .jumbotron{
+		margin-top: 15px;
+		margin-bottom: 15px;
+		width: 100%;
+		height: 100%;
+		padding-top: 0px;
+		padding-bottom: 0px;
+	}
+	body .container-fluid .jumbotron h2{
+		font-size: 20px;
+	}
+	body .container-fluid .jumbotron p{
+		font-size: 18px;
+	}
+}
+
+@media only screen and (device-width: 768px) {
+	/* default iPad screens */
+	body .container .carousel-inner .turn-pirc{
+		width: 100%;
+		height: 100%;
+	}
+	body .container {
+		margin: 30px 15px 30px 15px;
+		padding: 0px 0px 0px 0px;
+		background-color: #ffffff;
+	}
+}
+
+/* different techniques for iPad screening */
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+	/* For portrait layouts only */
+}
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+	/* For landscape layouts only */
+}
